从NUC上传到的2版2025年7月30日16时48分

--- a/src/rm_vision/rm_vision_bringup/CMakeLists.txt
+++ b/src/rm_vision/rm_vision_bringup/CMakeLists.txt
@@ -2,7 +2,11 @@ cmake_minimum_required(VERSION 3.8)
 project(rm_vision_bringup)
 
 find_package(ament_cmake_auto REQUIRED)
-
+# 安装弹道解算配置文件
+install(
+  FILES config/ballistic_solver.yaml
+  DESTINATION share/${PROJECT_NAME}/config
+)
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   set(ament_cmake_copyright_FOUND TRUE)
